Source/WebCore/page/ContextMenuController.cpp
@@ -448,9 +448,11 @@ void ContextMenuController::contextMenuItemSelected(ContextMenuItem* item)
     case ContextMenuItemTagCheckSpellingWhileTyping:
         frame->editor().toggleContinuousSpellChecking();
         break;
+#if USE(GRAMMAR_CHECKING)
     case ContextMenuItemTagCheckGrammarWithSpelling:
         frame->editor().toggleGrammarChecking();
         break;
+#endif
 #if PLATFORM(MAC)
     case ContextMenuItemTagShowFonts:
         frame->editor().showFontPanel();
@@ -567,8 +569,10 @@ void ContextMenuController::createAndAppendSpellingAndGrammarSubMenu(ContextMenu
         contextMenuItemTagCheckSpelling());
     ContextMenuItem checkAsYouType(CheckableActionType, ContextMenuItemTagCheckSpellingWhileTyping, 
         contextMenuItemTagCheckSpellingWhileTyping());
+#if USE(GRAMMAR_CHECKING)
     ContextMenuItem grammarWithSpelling(CheckableActionType, ContextMenuItemTagCheckGrammarWithSpelling, 
         contextMenuItemTagCheckGrammarWithSpelling());
+#endif
 #if PLATFORM(MAC)
     ContextMenuItem correctSpelling(CheckableActionType, ContextMenuItemTagCorrectSpellingAutomatically, 
         contextMenuItemTagCorrectSpellingAutomatically());
@@ -580,7 +584,9 @@ void ContextMenuController::createAndAppendSpellingAndGrammarSubMenu(ContextMenu
     appendItem(*separatorItem(), &spellingAndGrammarMenu);
 #endif
     appendItem(checkAsYouType, &spellingAndGrammarMenu);
+#if USE(GRAMMAR_CHECKING)
     appendItem(grammarWithSpelling, &spellingAndGrammarMenu);
+#endif
 #if PLATFORM(MAC)
     appendItem(correctSpelling, &spellingAndGrammarMenu);
 #endif
@@ -795,8 +801,10 @@ void ContextMenuController::populate()
         contextMenuItemTagIgnoreSpelling());
     ContextMenuItem LearnSpellingItem(ActionType, ContextMenuItemTagLearnSpelling, 
         contextMenuItemTagLearnSpelling());
+#if USE(GRAMMAR_CHECKING)
     ContextMenuItem IgnoreGrammarItem(ActionType, ContextMenuItemTagIgnoreGrammar, 
         contextMenuItemTagIgnoreGrammar());
+#endif
     ContextMenuItem CutItem(ActionType, ContextMenuItemTagCut, contextMenuItemTagCut());
     ContextMenuItem PasteItem(ActionType, ContextMenuItemTagPaste, contextMenuItemTagPaste());
 #if PLATFORM(GTK)
@@ -966,8 +974,12 @@ void ContextMenuController::populate()
                     if (misspelling) {
                         appendItem(IgnoreSpellingItem, m_contextMenu.get());
                         appendItem(LearnSpellingItem, m_contextMenu.get());
-                    } else
+                    }
+#if USE(GRAMMAR_CHECKING)
+                    else
                         appendItem(IgnoreGrammarItem, m_contextMenu.get());
+#endif
+
                     appendItem(*separatorItem(), m_contextMenu.get());
                     haveContextMenuItemsForMisspellingOrGrammer = true;
 #if PLATFORM(MAC)
@@ -1230,11 +1242,13 @@ void ContextMenuController::checkOrEnableIfNeeded(ContextMenuItem& item) const
         case ContextMenuItemTagLookUpInDictionary:
             shouldEnable = frame->selection()->isRange();
             break;
+#if USE(GRAMMAR_CHECKING)
         case ContextMenuItemTagCheckGrammarWithSpelling:
             if (frame->editor().isGrammarCheckingEnabled())
                 shouldCheck = true;
             shouldEnable = true;
             break;
+#endif
         case ContextMenuItemTagItalic: {
             shouldCheck = frame->editor().selectionHasStyle(CSSPropertyFontStyle, "italic") != FalseTriState;
             shouldEnable = frame->editor().canEditRichly();
@@ -1380,7 +1394,9 @@ void ContextMenuController::checkOrEnableIfNeeded(ContextMenuItem& item) const
         case ContextMenuItemPDFNextPage:
         case ContextMenuItemPDFPreviousPage:
         case ContextMenuItemTagOpenLink:
+#if USE(GRAMMAR_CHECKING)
         case ContextMenuItemTagIgnoreGrammar:
+#endif
         case ContextMenuItemTagSpellingMenu:
         case ContextMenuItemTagShowFonts:
         case ContextMenuItemTagStyles:
@@ -1409,6 +1425,8 @@ void ContextMenuController::checkOrEnableIfNeeded(ContextMenuItem& item) const
         case ContextMenuItemTagMediaMute:
             shouldEnable = m_hitTestResult.mediaHasAudio();
             shouldCheck = shouldEnable &&  m_hitTestResult.mediaMuted();
+            break;
+        default:
             break;
     }
 
