Source/WebKit2/Shared/API/c/WKSharedAPICast.h
@@ -400,8 +400,12 @@ inline WKContextMenuItemTag toAPI(WebCore::ContextMenuAction action)
         return kWKContextMenuItemTagPDFPreviousPage;
     case WebCore::ContextMenuItemTagOpenLink:
         return kWKContextMenuItemTagOpenLink;
+#if USE(GRAMMAR_CHECKING)
     case WebCore::ContextMenuItemTagIgnoreGrammar:
         return kWKContextMenuItemTagIgnoreGrammar;
+    case WebCore::ContextMenuItemTagCheckGrammarWithSpelling:
+        return kWKContextMenuItemTagCheckGrammarWithSpelling;
+#endif
     case WebCore::ContextMenuItemTagSpellingMenu:
         return kWKContextMenuItemTagSpellingMenu;
     case WebCore::ContextMenuItemTagShowSpellingPanel:
@@ -410,8 +414,6 @@ inline WKContextMenuItemTag toAPI(WebCore::ContextMenuAction action)
         return kWKContextMenuItemTagCheckSpelling;
     case WebCore::ContextMenuItemTagCheckSpellingWhileTyping:
         return kWKContextMenuItemTagCheckSpellingWhileTyping;
-    case WebCore::ContextMenuItemTagCheckGrammarWithSpelling:
-        return kWKContextMenuItemTagCheckGrammarWithSpelling;
     case WebCore::ContextMenuItemTagFontMenu:
         return kWKContextMenuItemTagFontMenu;
     case WebCore::ContextMenuItemTagShowFonts:
@@ -592,8 +594,12 @@ inline WebCore::ContextMenuAction toImpl(WKContextMenuItemTag tag)
         return WebCore::ContextMenuItemPDFPreviousPage;
     case kWKContextMenuItemTagOpenLink:
         return WebCore::ContextMenuItemTagOpenLink;
+#if USE(GRAMMAR_CHECKING)
     case kWKContextMenuItemTagIgnoreGrammar:
         return WebCore::ContextMenuItemTagIgnoreGrammar;
+    case kWKContextMenuItemTagCheckGrammarWithSpelling:
+        return WebCore::ContextMenuItemTagCheckGrammarWithSpelling;
+#endif
     case kWKContextMenuItemTagSpellingMenu:
         return WebCore::ContextMenuItemTagSpellingMenu;
     case kWKContextMenuItemTagShowSpellingPanel:
@@ -602,8 +608,6 @@ inline WebCore::ContextMenuAction toImpl(WKContextMenuItemTag tag)
         return WebCore::ContextMenuItemTagCheckSpelling;
     case kWKContextMenuItemTagCheckSpellingWhileTyping:
         return WebCore::ContextMenuItemTagCheckSpellingWhileTyping;
-    case kWKContextMenuItemTagCheckGrammarWithSpelling:
-        return WebCore::ContextMenuItemTagCheckGrammarWithSpelling;
     case kWKContextMenuItemTagFontMenu:
         return WebCore::ContextMenuItemTagFontMenu;
     case kWKContextMenuItemTagShowFonts:
